[package]
name = "airmash-front-page-server"
version = "0.1.0"
authors = ["STEAMROLLER"]

[profile.release]
lto = true
debug = true

[dependencies]
actix = "*"
actix-web = "*"
serde = { version="*", features=["derive"]  }
serde_json = "*"
futures = "0.1"
env_logger = "*"
hyper = "0.12"
hyper-tls = "0.3"
lazy_static = "*"
log = "*"
sentry = "0.7"
sentry-actix = "*"
