[package]
name = "airmash-front-page-server"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "APACHE-2.0 OR MIT"
description = "Dynamic Endpoint Backend for Airmash Frontpage"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-front-page-server'
readme = "README.md"


[profile.release]
#lto = true
debug = true

[dependencies]
actix = "*"
actix-web = { version="*", features=["alpn"] }
serde = { version="*", features=["derive"]  }
serde_json = "*"
futures = "0.1"
env_logger = "*"
hyper = "0.12"
hyper-tls = "0.3"
lazy_static = "*"
log = "*"
sentry = "0.12"
sentry-actix = "*"
