[package]
name = "airmash-front-page-server"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "APACHE-2.0 OR MIT"
description = "Dynamic Endpoint Backend for the Airmash Frontpage"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-front-page-server'
readme = "README.md"
edition = "2018"


[profile.release]
#lto = true
debug = true

[dependencies]
actix-web = "1.0"
serde = { version="1.0", features=["derive"]  }
serde_json = "1.0"
futures = { version="0.3", features=["compat"] }
env_logger = "0.7"
hyper = "0.12"
hyper-tls = "0.3"
lazy_static = "1.0"
log = "0.4"
attohttpc = "0.6"
arc-swap = "0.4"
